# term_project_3

./: .gitignore  README.md  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
