[tool.poetry]
name = "term-project-3"
version = "0.1.0"
description = "project"
authors = ["Марат Мусин <austenyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
